add ui funtionality for add button

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <script src="JS/script.js"></script>
+    <style src="CSS/style.css"></style>
     <title>Document</title>
 </head>
 <body>
