--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
   </div>
 
   <div id="contact-details" class="hidden">
-    <p>First Name: <span id="first-name"></span></p>
-    <p>Last Name: <span id="last-name"></span></p>
-    <p>Phone Number: <span id="phone-number"></span></p>
+    <p>First Name: <span class="first-name"></span></p>
+    <p>Last Name: <span class="last-name"></span></p>
+    <p>Phone Number: <span class="phone-number"></span></p>
   </div>
     
 </body>
